--- a/andyredisha-values.yaml
+++ b/andyredisha-values.yaml
@@ -6,7 +6,7 @@ image:
   tag: 5.0.6-alpine
   pullPolicy: IfNotPresent
 ## replicas number for each component
-replicas: 5
+replicas: 3
 
 ## Kubernetes priorityClass name for the redis-ha-server pod
 # priorityClassName: ""
@@ -196,7 +196,7 @@ nodeSelector: {}
 ## This is accomplished by setting their AntiAffinity with requiredDuringSchedulingIgnoredDuringExecution as opposed to preferred.
 ## Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#inter-pod-affinity-and-anti-affinity-beta-feature
 ##
-hardAntiAffinity: true
+hardAntiAffinity: false
 
 ## Additional affinities to add to the Redis server pods.
 ##
