--- a/redisclientnodejs/Dockerfile
+++ b/redisclientnodejs/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:10
 WORKDIR /usr/src/app
-RUN apt update; apt install vim -y; apt install redis-tools -y; npm install ioredis; alias ll="ls -al"
 COPY . .
+RUN apt update; apt install vim -y; apt install redis-tools -y; npm install ioredis
 EXPOSE 3000
-CMD [ "node", "redisweb.js" ]
+CMD [ "/usr/local/bin/node", "redisweb.js" ]
