--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 /.idea/
-/redisclientnodejs/node_modules/
 /redisclientnodejs/package-lock.json
-
-
 /chart-src/redis/.idea/
+/redisclientnodejs/node_modules/*
