--- a/redisclientnodejs/Dockerfile
+++ b/redisclientnodejs/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /usr/src/app
 COPY . .
 RUN apt update; apt install vim -y; apt install redis-tools -y; npm install ioredis
 EXPOSE 3000
-CMD [ "/usr/local/bin/node", "redisweb.js" ]
+#ENTRYPOINT [ "/usr/local/bin/node", "redisweb.js" ]
