--- a/andyredis-ha-values.yaml
+++ b/andyredis-ha-values.yaml
@@ -40,10 +40,13 @@ haproxy:
     pullPolicy: IfNotPresent
   annotations: {}
   resources: {}
+  ## Enable sticky sessions to Redis nodes via HAProxy
+  ## Very useful for long-living connections as in case of Sentry for example
+  stickyBalancing: true
   ## Kubernetes priorityClass name for the haproxy pod
   # priorityClassName: ""
   ## Service type for HAProxy
-  ## ClusterIP, LoadBalancer
+  ##
   service:
     type: LoadBalancer
     loadBalancerIP:
@@ -79,6 +82,7 @@ haproxy:
     connect: 4s
     server: 30s
     client: 30s
+    check: 2s
   securityContext:
     runAsUser: 1000
     fsGroup: 1000
@@ -116,6 +120,7 @@ sysctlImage:
   tag: 1.31.1
   pullPolicy: Always
   mountHostSys: false
+  resources: {}
 
 ## Use an alternate scheduler, e.g. "stork".
 ## ref: https://kubernetes.io/docs/tasks/administer-cluster/configure-multiple-schedulers/
@@ -140,7 +145,6 @@ redis:
     repl-diskless-sync: "yes"
     rdbcompression: "yes"
     rdbchecksum: "yes"
-    #cluster-enabled: "yes"
 
 
   ## Custom redis.conf files used to override default settings. If this file is
@@ -294,7 +298,7 @@ persistentVolume:
   # storageClass: "-"
   accessModes:
     - ReadWriteOnce
-  size: 10Gi
+  size: 16Gi
   annotations: {}
 init:
   resources: {}
